--- a/mediatheque/pom.xml
+++ b/mediatheque/pom.xml
@@ -61,6 +61,12 @@
 			<artifactId>weld-servlet</artifactId>
 			<version>2.4.5.Final</version>
 		</dependency>
+
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.4.3</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
