--- a/mediatheque/src/main/webapp/WEB-INF/web.xml
+++ b/mediatheque/src/main/webapp/WEB-INF/web.xml
@@ -38,5 +38,8 @@
 		<resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
 	</resource-env-ref>
 	
-
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>bootstrap</param-value>
+	</context-param>
 </web-app>
